--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"framer-motion": "^7.3.2",
 		"next": "^12.3.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"three": "^0.144.0"
 	},
 	"devDependencies": {
 		"eslint": "^8.23.0",
